<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/tv_title"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rectangle_edit_text"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:hint="@string/et_hint_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:paddingHorizontal="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <EditText
        android:id="@+id/et_surname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/et_top_margin"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rectangle_edit_text"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:hint="@string/et_hint_surname"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:paddingHorizontal="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <!--    <com.google.android.material.textfield.TextInputLayout-->
    <!--        android:id="@+id/layout_tel_num"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginTop="@dimen/et_top_margin"-->
    <!--        android:layout_marginEnd="16dp"-->
    <!--        android:layout_height="50dp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/et_surname"-->
    <!--        app:prefixTextAppearance="@style/TextInputLayoutAppearance"-->
    <!--        app:prefixTextColor="@color/black"-->
    <!--        app:prefixText="+998">-->

    <!--        <com.google.android.material.textfield.TextInputEditText-->
    <!--            android:id="@+id/et_tel_num"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:background="@drawable/rectangle_edit_text"-->
    <!--            android:drawablePadding="12dp"-->
    <!--            android:digits="1234567890+ "-->
    <!--            android:gravity="center_vertical"-->
    <!--            android:hint="@string/et_hint_tel_number"-->
    <!--            android:imeOptions="actionDone"-->
    <!--            android:inputType="number"-->
    <!--            android:maxLines="1"-->
    <!--            android:paddingHorizontal="16dp"-->
    <!--            android:textColor="@color/black"-->
    <!--            android:textColorHint="@color/hint_color"-->
    <!--            android:textSize="16sp" />-->

    <!--    </com.google.android.material.textfield.TextInputLayout>-->

        <com.example.testshopapplication.ui.custom.PhoneTextInputLayout
            android:id="@+id/edit_text_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="AAAAAAAAA"
            android:layout_marginTop="@dimen/et_top_margin"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_surname" />

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/layout_tel_num"-->
<!--        style="@style/TextInputLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="@dimen/et_top_margin"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/et_surname"-->
<!--        app:prefixText="+7"-->
<!--        app:prefixTextAppearance="@style/TextInputLayoutAppearance"-->
<!--        app:prefixTextColor="@color/black">-->

<!--        <com.example.testshopapplication.ui.custom.MaskEditText-->
<!--            android:id="@+id/edit_text"-->
<!--            style="@style/TextInputEditText"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:digits="1234567890+ "-->
<!--            android:hint="@string/user_phone_number"-->
<!--            android:imeOptions="actionDone"-->
<!--            android:inputType="number"-->
<!--            android:textSize="14sp"-->
<!--            app:mask_edit="### ### ## ##" />-->



<!--    </com.google.android.material.textfield.TextInputLayout>-->



    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/et_top_margin"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rectangle_button_not_enabled"
        android:text="@string/btn_text"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_phone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/tv_terms_of_agreement"
        android:textColor="@color/hint_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/tv_terms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/tv_continue_terms"
        android:textColor="@color/hint_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>